# FREQ-AI-VERTEX

./: .firebaserc  .gitignore  AGENT_PROTOCOL.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  firebase.json  install.sh  pyproject.toml  requirements.txt  run_lattice.py  setup.py
.claude/: SKILL.md
.claude-plugin/: marketplace.json
.github/agents/: my-agent.agent.md
.github/workflows/: firebase-hosting.yml
.streamlit/: config.toml  secrets.toml.example
assets/: executor_scouter_workflow.md  linkedin_posts_ready.md  target_contacts.md
config/: platform_config.yaml  scouter_config.yaml  sol_config.yaml  vertex_ai_agent.yaml
config/mcp/: linkedin_mcp.json
dashboard/: Dockerfile  app.py  deploy.sh  index.html  requirements.txt
docs/: FREQ_SOL_AZURE_BLUEPRINT.md  GAP_ANALYSIS_BRIDGE_PLAN.md  MASTER_PRODUCTION_PLAN.md  PHASE3_TRANSITION.md  PLATFORM_COMPARISON_MATRIX.md  STATE_OF_THE_MISSION.md  deployment_manifest.md
examples/: usage_examples.py
infrastructure/gcp/: Dockerfile  README.md  app.py  cloudbuild.yaml  deploy.sh  requirements.txt  service.yaml
infrastructure/lambda/cge/: handler.py
infrastructure/lambda/ssc/: handler.py
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/: dev.tfvars  prod.tfvars
public/: index.html
ref_legacy/: draft_readings_2025.csv  hull_displacement_config.json  sensor_telemetry_sample.json
src/: __init__.py
src/freq_ai/: __init__.py  cli.py
src/freq_ai/core/: __init__.py  freq_law.py  fsm.py
src/freq_ai/nodes/: __init__.py  base_node.py  gemini_nodes.py
src/freq_ai/orchestration/: __init__.py  orchestrator.py
src/freq_ai/verticals/: __init__.py  vertical_context.py
src/lattice_core/: __init__.py  manifest.json
src/sol/: __init__.py
src/sol/activation/: __init__.py  phase2_verification.py  phase3_activation.py
src/sol/api/: __init__.py  routes.py  schemas.py  websocket.py
src/sol/audit/: __init__.py  bigquery.py
src/sol/blueprint/: __init__.py  freq_blueprint.py
src/sol/consensus/: __init__.py  quorum.py
src/sol/digital_twins/: __init__.py  client.py  models_registry.py
src/sol/digital_twins/integrations/: __init__.py  opendronemap.py  sync_bridge.py
src/sol/digital_twins/models/: __init__.py  cargo_barge.json  cargo_hold.json  environmental_zone.json  lidar_drone.json  lidar_sensor.json  maritime_vessel.json
src/sol/governance/: __init__.py  freq_law.py  veto.py
src/sol/lattice_core/: __init__.py  bigquery_bridge.py  lattice_status.py  simulation_runner.py  supply_chain_twin.py  telemetry_simulator.py
src/sol/nodes/: __init__.py  base.py  element_design.py  exec_automate.py  gov_engine.py  legacy_architect.py  maritime_ops.py  optimal_intel.py  spci.py  strategic_op.py
src/sol/platform/: __init__.py  config.py  providers.py  unified_model.py
src/sol/scouter/: __init__.py  linkedin_bridge.py  node.py  outreach_engine.py  pitch_generator.py
src/sol/scouter/templates/: __init__.py  linkedin_posts.py  outreach_sequences.py
src/sol/simulation/: __init__.py  demo_output.json  demo_runner.py  maritime_barge.py
src/sol/ui/: __init__.py
src/sol/ui/components/: __init__.py  audit_timeline.py  freq_compliance.py  lattice_status.py  mission_card.py
src/sol/ui/core/: __init__.py  themes.py  tokens.py
tests/: test_api.py  test_maritime.py  test_sol.py
tools/adt-explorer/: setup.sh
