[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freq-ai-sol"
version = "0.1.0"
description = "Sophisticated Operational Lattice (SOL) - Multi-node AI orchestration system for legacy modernization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "orchestration", "vertex-ai", "gemini", "distributed-systems"]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.38.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX"
Repository = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX.git"
Documentation = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
