[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freq-ai-sol"
version = "0.2.0"
description = "FREQ AI Sophisticated Operational Lattice (SOL) - Multi-provider AI orchestration with enterprise UX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "orchestration", "vertex-ai", "gemini", "claude", "bedrock", "multi-agent", "distributed-systems", "maritime"]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# AWS Bedrock (Primary provider for Opus 4.5)
aws = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
# Anthropic Direct API (Fallback)
anthropic = [
    "anthropic>=0.40.0",
]
# Google Cloud (Vertex AI + BigQuery)
gcp = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.38.0",
]
# Azure Foundry
azure = [
    "azure-ai-inference>=1.0.0",
]
# Full platform support
platform = [
    "boto3>=1.34.0",
    "anthropic>=0.40.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.38.0",
]
# API/Web dependencies
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# All dependencies
all = [
    "boto3>=1.34.0",
    "anthropic>=0.40.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX"
Repository = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX.git"
Documentation = "https://github.com/dre-orchestrator-ai/FREQ-AI-VERTEX#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
